--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "server.js",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/velhelm/WaitrTest#readme",
   "dependencies": {
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+	"knex": "^0.8.6",
+    "nodemon": "^1.3.7",
+    "pg": "^4.4.0"
   }
 }
